--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>AngularInterface</title>
@@ -8,7 +9,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
+
+  <header class="container text-white">
+    <h4 class="py-2">Wisdom Pet Medicine</h4>
+  </header>
+
   <app-root></app-root>
+
+  <footer class="container d-flex text-white py-2">
+    <p>All contents &copy; 2019 <a href="https://www.github.com/NathanPickard">Nathan Pickard</a>. All rights reserved.
+    </p>
+    <div class="ml-auto">
+    </div><!-- col-md-6 -->
+  </footer><!-- footer -->
 </body>
+
 </html>
